# libdjinterop

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DjInteropConfig.cmake.in  Doxyfile.in  GUIDE.md  Makefile.am  README.md  autogen.sh  cleanup.sh  configure.ac  default.nix  djinterop.pc.in  libdjinterop_0.14.7.orig.tar.gz.delta  libdjinterop_0.14.7.orig.tar.gz.id  libdjinterop_0.14.8.orig.tar.gz.delta  libdjinterop_0.14.8.orig.tar.gz.id  libdjinterop_0.14.9.orig.tar.gz.delta  libdjinterop_0.14.9.orig.tar.gz.id  libdjinterop_0.15.0.orig.tar.gz.delta  libdjinterop_0.15.0.orig.tar.gz.id  libdjinterop_0.15.1.orig.tar.gz.delta  libdjinterop_0.15.1.orig.tar.gz.id  libdjinterop_0.15.2.orig.tar.gz.delta  libdjinterop_0.15.2.orig.tar.gz.id  libdjinterop_0.16.0.orig.tar.gz.delta  libdjinterop_0.16.0.orig.tar.gz.id  libdjinterop_0.16.1.orig.tar.gz.delta  libdjinterop_0.16.1.orig.tar.gz.id  libdjinterop_0.19.1.orig.tar.gz.delta  libdjinterop_0.19.1.orig.tar.gz.id  libdjinterop_0.19.2.orig.tar.gz.delta  libdjinterop_0.19.2.orig.tar.gz.id  libdjinterop_0.20.0.orig.tar.gz.delta  libdjinterop_0.20.0.orig.tar.gz.id  libdjinterop_0.20.1.orig.tar.gz.delta  libdjinterop_0.20.1.orig.tar.gz.id  libdjinterop_0.20.2.orig.tar.gz.delta  libdjinterop_0.20.2.orig.tar.gz.id  (+20 more)
include/: meson.build
include/djinterop/: album_art.hpp  config.hpp  config.hpp.in  crate.hpp  database.hpp  djinterop.hpp  enginelibrary.hpp  exceptions.hpp  meson.build  musical_key.hpp  optional.hpp  pad_color.hpp  performance_data.hpp  playlist.hpp  semantic_version.hpp  stream_helper.hpp  track.hpp  track_snapshot.hpp  transaction_guard.hpp
include/djinterop/engine/: base_engine_library.hpp  engine.hpp  engine_schema.hpp  engine_version.hpp
include/djinterop/engine/v2/: beat_data_blob.hpp  change_log_table.hpp  engine_library.hpp  information_table.hpp  loops_blob.hpp  overview_waveform_data_blob.hpp  playlist_entity_table.hpp  playlist_table.hpp  quick_cues_blob.hpp  track_data_blob.hpp  track_table.hpp
include/djinterop/engine/v3/: beat_data_blob.hpp  engine_library.hpp  information_table.hpp  loops_blob.hpp  overview_waveform_data_blob.hpp  performance_data_table.hpp  playlist_entity_table.hpp  playlist_table.hpp  quick_cues_blob.hpp  track_data_blob.hpp  track_table.hpp
include/djinterop/enginelibrary/: album_art.hpp  crate.hpp  database.hpp  musical_key.hpp  pad_color.hpp  pad_colour.hpp  performance_data.hpp  schema_version.hpp  track.hpp
include/djinterop/optional/: optional.hpp
include/enginelibrary/: album_art.hpp  crate.hpp  database.hpp  performance_data.hpp  track.hpp
src/: .performance_data.cpp.swp  .performance_data_test.cpp.swp  Makefile.am  database.cpp  database_test.cpp  encode_decode_utils.hpp  meson.build  performance_data.cpp  performance_data_format.cpp  performance_data_format.hpp  performance_data_test.cpp  schema.cpp  schema.hpp  schema_test.cpp  sqlite3_db_raii.hpp  track.cpp  track_test.cpp
src/djinterop/: crate.cpp  database.cpp  enginelibrary.cpp  enginelibrary.hpp  performance_data.cpp  playlist.cpp  track.cpp  transaction_guard.cpp  util.cpp  util.hpp
src/djinterop/engine/: base_engine_impl.hpp  base_engine_library.cpp  encode_decode_utils.cpp  encode_decode_utils.hpp  engine.cpp  engine_library_context.hpp  engine_library_dir_utils.cpp  engine_library_dir_utils.hpp  metadata_types.hpp  track_utils.hpp
src/djinterop/engine/schema/: schema.cpp  schema.hpp  schema_1_11_1.cpp  schema_1_11_1.hpp  schema_1_13_0.cpp  schema_1_13_0.hpp  schema_1_13_1.cpp  schema_1_13_1.hpp  schema_1_13_2.cpp  schema_1_13_2.hpp  schema_1_15_0.cpp  schema_1_15_0.hpp  schema_1_17_0.cpp  schema_1_17_0.hpp  schema_1_18_0_desktop.cpp  schema_1_18_0_desktop.hpp  schema_1_18_0_os.cpp  schema_1_18_0_os.hpp  schema_1_6_0.cpp  schema_1_6_0.hpp  (+27 more)
src/djinterop/enginelibrary/: crate.hpp  database.hpp  el_crate_impl.cpp  el_crate_impl.hpp  el_database_impl.cpp  el_database_impl.hpp  el_storage.cpp  el_storage.hpp  el_track_impl.cpp  el_track_impl.hpp  el_transaction_guard_impl.cpp  el_transaction_guard_impl.hpp  encode_decode_utils.cpp  encode_decode_utils.hpp  metadata_types.hpp  musical_key.hpp  pad_colour.hpp  performance_data.hpp  performance_data_format.cpp  performance_data_format.hpp  schema.cpp  schema.hpp  schema_1_6_0.cpp  schema_1_6_0.hpp  schema_1_7_1.cpp  schema_1_7_1.hpp  schema_validate_utils.hpp  schema_version.hpp  track.hpp  track_utils.hpp
src/djinterop/impl/: crate_impl.cpp  crate_impl.hpp  database_impl.cpp  database_impl.hpp  playlist_impl.hpp  track_impl.cpp  track_impl.hpp  transaction_guard_impl.cpp  transaction_guard_impl.hpp  util.cpp  util.hpp
src/djinterop/util/: chrono.cpp  chrono.hpp  convert.hpp  filesystem.cpp  filesystem.hpp  random.cpp  random.hpp  sqlite_transaction.hpp
src/enginelibrary/: crate.cpp  crate_test.cpp  database.cpp  database_impl.cpp  database_impl.hpp  database_test.cpp  encode_decode_utils.cpp  encode_decode_utils.hpp  performance_data.cpp  performance_data_format.cpp  performance_data_format.hpp  performance_data_test.cpp  schema.cpp  schema.hpp  schema_1_6_0.cpp  schema_1_6_0.hpp  schema_1_7_1.cpp  schema_1_7_1.hpp  schema_test.cpp  schema_validate_utils.hpp  track.cpp  track_test.cpp  util.cpp  util.hpp
src/engineprime/: .performance_data.hpp.swp  album_art.hpp  database.hpp  engineprime.hpp  musical_key.hpp  pad_colour.hpp  performance_data.hpp  schema_version.hpp  track.hpp
test/: meson.build
test/djinterop/: boost_test_printable.hpp  boost_test_utils.hpp  semantic_version_test.cpp  track_test_utils.hpp
test/djinterop/engine/: crate_test.cpp  database_reference_test.cpp  database_test.cpp  engine_test.cpp  example_track_data.hpp  playlist_test.cpp  track_test.cpp
test/engine/: boost_test_printable.hpp  database_test.cpp  engine_test.cpp  example_track_data.hpp  track_test.cpp
test/enginelibrary/: boost_test_utils.hpp  crate_test.cpp  database_test.cpp  enginelibrary_test.cpp  example_track_data.hpp  performance_data_test.cpp  schema_test.cpp  semantic_version_test.cpp  temporary_directory.hpp  track_snapshot_test.cpp  track_test.cpp
(+217 files in other folders)
