# Used only to generate config.hpp in the nested include dir.
subdir('djinterop')

djinterop_header_files = [
    'djinterop/album_art.hpp',
    'djinterop/crate.hpp',
    'djinterop/database.hpp',
    'djinterop/djinterop.hpp',
    'djinterop/exceptions.hpp',
    'djinterop/enginelibrary.hpp',
    'djinterop/musical_key.hpp',
    'djinterop/pad_color.hpp',
    'djinterop/performance_data.hpp',
    'djinterop/semantic_version.hpp',
    'djinterop/track.hpp',
    'djinterop/transaction_guard.hpp'
]

install_headers(djinterop_header_files, subdir: 'djinterop')

